Second Commit alterações Botão

--- a/Pages/barchart.html
+++ b/Pages/barchart.html
@@ -20,18 +20,20 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            <canvas id="barchart"></canvas>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
+        <div class="row" style="margin-left: 92%">
             <button type="button" class="btn">
                 <a class="btn btn-secondary" href="../index.html">Voltar</a>
             </button>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <canvas id="barchart"></canvas>
+        </div>
+    </div>
+
+   
 
     <!-- Bootstrap JS needed -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
