--- a/Pages/linechart.html
+++ b/Pages/linechart.html
@@ -19,19 +19,21 @@
         <br/><br/><br/><br/>
     </div>
 
-    <div class="container">
-        <div class="row">
-            <canvas id="linechart"></canvas>
-        </div>
-    </div>
-
-    <div class="container">
+    <div class="container" style="margin-left: 92%">
         <div class="row">
             <button type="button" class="btn">
                 <a class="btn btn-secondary" href="../index.html">Voltar</a>
             </button>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <canvas id="linechart"></canvas>
+        </div>
+    </div>
+
+    
 
     <!-- Bootstrap JS needed -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
