Criação do PIE e Radar Chart

--- a/index.html
+++ b/index.html
@@ -68,7 +68,28 @@
                 </div>
 
             </div>
-
+            <div class ="col-md-1"></div>
+            <div class ="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="Contents/img/radar_chart.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Radar Chart</h5>
+                        <p class="card-text">Este card representa um simples gráfico de Radar</p>
+                        <a href="Pages/radarchart.html" class="btn btn-primary">Show Chart</a>
+                    </div>
+                </div>
+            </div>
+            <div class ="col-md-1"></div>
+            <div class ="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="Contents/img/pie_chart.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Radar Chart</h5>
+                        <p class="card-text">Este card representa um simples gráfico de fatias</p>
+                        <a href="Pages/piechart.html" class="btn btn-primary">Show Chart</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
