--- a/index.html
+++ b/index.html
@@ -1,102 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ChartsJS Tutorial</title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
+    <title>Carlos Freire - Contabilista e Líder Financeiro</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-<body style="padding-top:3%">
-
-    <div class="container">
-        <h1>Estudo Charts.JS <span class="badge badge-secondary">Home</span></h1>
-        <br/><br/><br/><br/>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/bar_chart.png" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Chart Bar</h5>
-                        <p class="card-text">Este card representa um simples gráfico do tipo "barras". Contém apenas um dataset de dados.</p>
-                        <a href="Pages/barchart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/line_chart.PNG" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Line Chart</h5>
-                        <p class="card-text">Este card representa um simples gráfico do tipo "line". Contém apenas um dataset de dados.</p>
-                        <a href="Pages/linechart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/area_chart.PNG" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Area Chart</h5>
-                        <p class="card-text">Este card representa um simples gráfico do tipo "area". Contém apenas um dataset de dados.</p>
-                        <a href="Pages/areachart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
-                </div>
-            </div>
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+            <h1>Carlos Freire</h1>
+            <p>Contabilista Certificado | Controller de Gestão | Líder Financeiro</p>
         </div>
-        <br/>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/combination-chart.png" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Combo Chart</h5>
-                        <p class="card-text">Este card representa um simples gráfico "combinado"</p>
-                        <a href="Pages/combochart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
+    </header>
 
-                </div>
+    <!-- Navegação -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Sobre Mim</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contato</a></li>
+        </ul>
+    </nav>
 
-            </div>
-            <div class ="col-md-1"></div>
-            <div class ="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/radar_chart.png" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Radar Chart</h5>
-                        <p class="card-text">Este card representa um simples gráfico de Radar</p>
-                        <a href="Pages/radarchart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
-                </div>
-            </div>
-            <div class ="col-md-1"></div>
-            <div class ="col-md-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="Contents/img/pie_chart.png" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Radar Chart</h5>
-                        <p class="card-text">Este card representa um simples gráfico de fatias</p>
-                        <a href="Pages/piechart.html" class="btn btn-primary">Show Chart</a>
-                    </div>
-                </div>
-            </div>
+    <!-- Seção Home -->
+    <section id="home" class="section">
+        <div class="container">
+            <h2>Bem-vindo ao meu site profissional</h2>
+            <p>Aqui você pode conhecer minha trajetória, serviços e entrar em contato.</p>
         </div>
-    </div>
+    </section>
 
-    <!-- Bootstrap JS needed -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <!-- Seção Sobre Mim -->
+    <section id="about" class="section">
+        <div class="container">
+            <h2>Sobre Mim</h2>
+            <p>Sou Carlos Freire, profissional com sólida formação em Contabilidade e Gestão, com experiência em liderança e otimização de processos financeiros.</p>
+        </div>
+    </section>
+
+    <!-- Seção Serviços -->
+    <section id="services" class="section">
+        <div class="container">
+            <h2>Serviços</h2>
+            <ul>
+                <li>Consultoria Contábil</li>
+                <li>Controller de Gestão</li>
+                <li>Otimização de Processos Financeiros</li>
+                <li>Automatização de Tarefas Financeiras</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Seção Blog -->
+    <section id="blog" class="section">
+        <div class="container">
+            <h2>Blog</h2>
+            <p>Em breve, artigos sobre contabilidade, gestão e liderança financeira.</p>
+        </div>
+    </section>
+
+    <!-- Seção Contato -->
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contato</h2>
+            <form id="contactForm">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Mensagem:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Carlos Freire. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
-
 </html>
