--- a/index.html
+++ b/index.html
@@ -5,58 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Freire - Contabilista e Líder Financeiro</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Cabeçalho -->
     <header>
         <div class="container">
-            <h1>Carlos Freire</h1>
-            <p>Contabilista Certificado | Controller de Gestão | Líder Financeiro</p>
+            <div class="logo">
+                <h1>Carlos Freire</h1>
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">Sobre Mim</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <!-- Navegação -->
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">Sobre Mim</a></li>
-            <li><a href="#services">Serviços</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contact">Contato</a></li>
-        </ul>
-    </nav>
-
     <!-- Seção Home -->
-    <section id="home" class="section">
-        <div class="container">
+    <section id="home" class="hero-section">
+        <div class="hero-content">
             <h2>Bem-vindo ao meu site profissional</h2>
-            <p>Aqui você pode conhecer minha trajetória, serviços e entrar em contato.</p>
+            <p>Transformando desafios financeiros em soluções estratégicas.</p>
+            <a href="#contact" class="cta-button">Entre em Contato</a>
         </div>
     </section>
 
     <!-- Seção Sobre Mim -->
-    <section id="about" class="section">
+    <section id="about" class="section about-section">
         <div class="container">
             <h2>Sobre Mim</h2>
-            <p>Sou Carlos Freire, profissional com sólida formação em Contabilidade e Gestão, com experiência em liderança e otimização de processos financeiros.</p>
+            <p>Sou Carlos Freire, profissional com sólida formação em Contabilidade e Gestão. Ao longo dos últimos anos, atuei em projetos de otimização de processos financeiros e desenvolvi competências em automação, sempre focado em resultados.</p>
         </div>
     </section>
 
     <!-- Seção Serviços -->
-    <section id="services" class="section">
+    <section id="services" class="section services-section">
         <div class="container">
             <h2>Serviços</h2>
-            <ul>
-                <li>Consultoria Contábil</li>
-                <li>Controller de Gestão</li>
-                <li>Otimização de Processos Financeiros</li>
-                <li>Automatização de Tarefas Financeiras</li>
-            </ul>
+            <div class="services-grid">
+                <div class="service-item">
+                    <h3>Consultoria Contábil</h3>
+                    <p>Fornecendo insights financeiros precisos para decisões estratégicas.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Controller de Gestão</h3>
+                    <p>Monitoramento e controle para otimizar a performance financeira.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Otimização de Processos</h3>
+                    <p>Aprimoramento contínuo para reduzir custos e aumentar a eficiência.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Automatização de Tarefas</h3>
+                    <p>Implementação de soluções tecnológicas para aumentar a produtividade.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Seção Blog -->
-    <section id="blog" class="section">
+    <section id="blog" class="section blog-section">
         <div class="container">
             <h2>Blog</h2>
             <p>Em breve, artigos sobre contabilidade, gestão e liderança financeira.</p>
@@ -64,20 +79,23 @@
     </section>
 
     <!-- Seção Contato -->
-    <section id="contact" class="section">
+    <section id="contact" class="section contact-section">
         <div class="container">
             <h2>Contato</h2>
             <form id="contactForm">
-                <label for="name">Nome:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Mensagem:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Enviar</button>
+                <div class="form-group">
+                    <label for="name">Nome:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensagem:</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <button type="submit" class="cta-button">Enviar</button>
             </form>
         </div>
     </section>
