--- a/index.html
+++ b/index.html
@@ -12,94 +12,35 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Carlos Freire</h1>
+        <div class="container header-container">
+            <div class="logo-title">
+                <img src="cf (3) - Cinza.png" alt="Logo" class="logo"> <!-- Logotipo -->
+                <h1 class="site-title">Carlos Freire</h1> <!-- Título -->
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">Sobre Mim</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="CV.pdf" download class="download-cv">Download CV</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Seção Home -->
-    <section id="home" class="hero-section">
-        <div class="hero-content">
-            <h2>Bem-vindo ao meu site profissional</h2>
-            <p>Transformando desafios financeiros em soluções estratégicas.</p>
-            <a href="#contact" class="cta-button">Entre em Contato</a>
-        </div>
-    </section>
-
     <!-- Seção Sobre Mim -->
     <section id="about" class="section about-section">
-        <div class="container">
-            <h2>Sobre Mim</h2>
-            <p>Sou Carlos Freire, profissional com sólida formação em Contabilidade e Gestão. Ao longo dos últimos anos, atuei em projetos de otimização de processos financeiros e desenvolvi competências em automação, sempre focado em resultados.</p>
-        </div>
-    </section>
-
-    <!-- Seção Serviços -->
-    <section id="services" class="section services-section">
-        <div class="container">
-            <h2>Serviços</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <h3>Consultoria Contábil</h3>
-                    <p>Fornecendo insights financeiros precisos para decisões estratégicas.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Controller de Gestão</h3>
-                    <p>Monitoramento e controle para otimizar a performance financeira.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Otimização de Processos</h3>
-                    <p>Aprimoramento contínuo para reduzir custos e aumentar a eficiência.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Automatização de Tarefas</h3>
-                    <p>Implementação de soluções tecnológicas para aumentar a produtividade.</p>
-                </div>
+        <h3></h3>
+        <div class="container about-container">
+            <div class="about-image">
+                <img src="Fotografia Tipo Passe.jpg" alt="Carlos Freire">
+            </div>
+            <div class="about-text">
+                <p> Sou o Carlos Freire, um profissional dedicado com mais de cinco anos de experiência em Contabilidade, Gestão Financeira e Otimização de Processos. O meu trajeto é marcado pela capacidade de transformar desafios em oportunidades, sempre com foco em gerar valor para as organizações em que atuo.<br><br>
+                    Ao longo destes anos, tive a oportunidade de liderar equipas e implementar estratégias que resultaram em melhorias significativas na eficiência operacional e na redução de custos. A formação em Contabilidade e Gestão, aliada a um MBA Pré-Executivo, proporciona-me uma base sólida para compreender e resolver problemas complexos, sempre almejando soluções inovadoras.<br><br>
+                    No último ano, fui desafiado a assumir a liderança de uma equipa de processos admnistrativos e financeiros. Paralelamente, desenvolvi competências tecnológicas ao aplicar automação nas tarefas diárias das equipas sobre a minha gestão.<br><br>
+                    Fora do trabalho, sou um entusiasta de tecnologia e de gestão financeira. Acredito que a primeira é o caminho mais eficiente e sustentável, para que a segunda seja efetuada da melhor forma possível. Estou sempre à procura de novos desafios que me permitam aplicar os meus conhecimentos, continuando sempre a crescer como profissional
+                    </p>
             </div>
         </div>
     </section>
-
-    <!-- Seção Blog -->
-    <section id="blog" class="section blog-section">
-        <div class="container">
-            <h2>Blog</h2>
-            <p>Em breve, artigos sobre contabilidade, gestão e liderança financeira.</p>
-        </div>
-    </section>
-
-    <!-- Seção Contato -->
-    <section id="contact" class="section contact-section">
-        <div class="container">
-            <h2>Contato</h2>
-            <form id="contactForm">
-                <div class="form-group">
-                    <label for="name">Nome:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Mensagem:</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit" class="cta-button">Enviar</button>
-            </form>
-        </div>
-    </section>
-
     <!-- Rodapé -->
     <footer>
         <div class="container">
