--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="CV.pdf" download class="download-cv">Download CV</a></li>
+                    <li><a href="CV - Carlos Freire.pdf" download class="download-cv">Download CV</a></li>
                 </ul>
             </nav>
         </div>
