--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="about-text">
                 <p> Sou o Carlos Freire, um profissional dedicado com mais de cinco anos de experiência em Contabilidade, Gestão Financeira e Otimização de Processos. O meu trajeto é marcado pela capacidade de transformar desafios em oportunidades, sempre com foco em gerar valor para as organizações em que atuo.<br><br>
                     Ao longo destes anos, tive a oportunidade de liderar equipas e implementar estratégias que resultaram em melhorias significativas na eficiência operacional e na redução de custos. A formação em Contabilidade e Gestão, aliada a um MBA Pré-Executivo, proporciona-me uma base sólida para compreender e resolver problemas complexos, sempre almejando soluções inovadoras.<br><br>
-                    No último ano, fui desafiado a assumir a liderança de uma equipa de processos admnistrativos e financeiros. Paralelamente, desenvolvi competências tecnológicas ao aplicar automação nas tarefas diárias das equipas sobre a minha gestão.<br><br>
+                    No último ano, fui desafiado a assumir a liderança de uma equipa de processos admnistrativos e financeiros. Paralelamente, desenvolvi competências tecnológicas ao aplicar automação nas tarefas diárias das equipas sob a minha gestão.<br><br>
                     Fora do trabalho, sou um entusiasta de tecnologia e de gestão financeira. Acredito que a primeira é o caminho mais eficiente e sustentável, para que a segunda seja efetuada da melhor forma possível. Estou sempre à procura de novos desafios que me permitam aplicar os meus conhecimentos, continuando sempre a crescer como profissional
                     </p>
             </div>
