--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
                 <img src="Fotografia Tipo Passe.jpg" alt="Carlos Freire">
             </div>
             <div class="about-text">
-                <p> Sou o Carlos Freire, um profissional dedicado com mais de cinco anos de experiência em Contabilidade, Gestão Financeira e Otimização de Processos. O meu trajeto é marcado pela capacidade de transformar desafios em oportunidades, sempre com foco em gerar valor para as organizações em que atuo.<br><br>
-                    Ao longo destes anos, tive a oportunidade de liderar equipas e implementar estratégias que resultaram em melhorias significativas na eficiência operacional e na redução de custos. A formação em Contabilidade e Gestão, aliada a um MBA Pré-Executivo, proporciona-me uma base sólida para compreender e resolver problemas complexos, sempre almejando soluções inovadoras.<br><br>
-                    No último ano, fui desafiado a assumir a liderança de uma equipa de processos admnistrativos e financeiros. Paralelamente, desenvolvi competências tecnológicas ao aplicar automação nas tarefas diárias das equipas sob a minha gestão.<br><br>
-                    Fora do trabalho, sou um entusiasta de tecnologia e de gestão financeira. Acredito que a primeira é o caminho mais eficiente e sustentável, para que a segunda seja efetuada da melhor forma possível. Estou sempre à procura de novos desafios que me permitam aplicar os meus conhecimentos, continuando sempre a crescer como profissional
-                    </p>
+                 <p>
+                        Sou o <strong>Carlos Freire</strong>, um profissional com forte orientação analítica e foco em resultados, atualmente a desempenhar funções como <strong>Senior Business Analyst</strong>. O meu trabalho passa por apoiar decisões estratégicas na <strong>otimização de gama de produtos</strong> através da análise de dados e avaliação de performance, com impacto direto na rentabilidade e na eficiência operacional.
+                 </p>
+                 <p>
+                        Com um percurso consistente nas áreas de <strong>controlo de gestão, contabilidade e finanças</strong>, tenho liderado equipas e projetos em ambientes desafiantes, sempre com uma abordagem centrada na melhoria contínua, clareza nos processos e entrega de valor. Ao longo dos anos, fui consolidando competências que cruzam o domínio técnico com a capacidade de pensar de forma crítica, estratégica e colaborativa.
+                 </p>
+                 <p>
+                        Sou movido pela curiosidade, pela procura de soluções práticas e pela vontade de entender o “porquê” por trás de cada processo. Valorizo relações de trabalho baseadas na confiança, comunicação clara e empatia — elementos que considero essenciais para qualquer equipa que queira alcançar bons resultados de forma sustentável.
+                 </p>
+                 <p>
+                        Vejo cada desafio como uma oportunidade de crescimento. Ao longo do meu percurso, fui adquirindo uma visão transversal do negócio e desenvolvendo um sentido de responsabilidade que me permite atuar com autonomia, sem nunca perder o foco no impacto que as decisões têm sobre a organização como um todo.
+                 </p>
             </div>
         </div>
     </section>
