--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="about-text">
                  <p>
-                        Sou o <strong>Carlos Freire</strong>, um profissional com forte orientação analítica e foco em resultados, atualmente a desempenhar funções como <strong>Senior Business Analyst</strong>. O meu trabalho passa por apoiar decisões estratégicas na <strong>otimização de gama de produtos</strong> através da análise de dados e avaliação de performance, com impacto direto na rentabilidade e na eficiência operacional.
+                        Sou o <strong>Carlos Freire</strong>, um profissional com forte orientação analítica e foco em resultados, atualmente a desempenhar funções como <strong>Senior Business Analyst</strong>. O meu trabalho passa por apoiar decisões estratégicas na <strong>otimização de gama</strong> através da análise de dados e avaliação de performance, com impacto direto na rentabilidade e na eficiência operacional.
                  </p>
                  <p>
                         Com um percurso consistente nas áreas de <strong>controlo de gestão, contabilidade e finanças</strong>, tenho liderado equipas e projetos em ambientes desafiantes, sempre com uma abordagem centrada na melhoria contínua, clareza nos processos e entrega de valor. Ao longo dos anos, fui consolidando competências que cruzam o domínio técnico com a capacidade de pensar de forma crítica, estratégica e colaborativa.
